<resources>
 <string name="app_name">Biodata</string>
 //neha
 <string name="nehaNim">211402090</string>
 <string name="nehaSurel">nehasabila62@gmail.com</string>
 <string name="nehaFakultas">Fasilkom-TI</string>
 <string name="nehaProgrambelajar">Teknologi Informasi</string>
 <string name="nehaSemesterterdaftar">1</string>
 <string name="nehaStatus">Aktif</string>

 //jauza
 <string name="jauzaNim">211402024</string>
 <string name="jauzaSurel">jauzaanbari12@gmail.com</string>
 <string name="jauzaFakultas">Fasilkom-TI</string>
 <string name="jauzaProgrambelajar">Teknologi Informasi</string>
 <string name="jauzaSemesterterdaftar">1</string>
 <string name="jauzaStatus">Aktif</string>

 //hakim
 <string name="hakimNim">211402078</string>
 <string name="hakimSurel">abdulhakim78@gmail.com</string>
 <string name="hakimFakultas">Fasilkom-TI</string>
 <string name="hakimProgrambelajar">Teknologi Informasi</string>
 <string name="hakimSemesterterdaftar">1</string>
 <string name="hakimStatus">Aktif</string>

 //erastus
 <string name="erastusNim">211402042</string>
 <string name="erastusSurel">erastus42@gmail.com</string>
 <string name="erastusFakultas">Fasilkom-TI</string>
 <string name="erastusProgrambelajar">Teknologi Informasi</string>
 <string name="erastusSemesterterdaftar">1</string>
 <string name="erastusStatus">Aktif</string>

 //yusuf
 <string name="yusufNim">211402060</string>
 <string name="yusufSurel">yusuf60@gmail.com</string>
 <string name="yusufFakultas">Fasilkom-TI</string>
 <string name="yusufProgrambelajar">Teknologi Informasi</string>
 <string name="yusufSemesterterdaftar">1</string>
 <string name="yusufStatus">Aktif</string>

 //david
 <string name="davidNim">211402141</string>
 <string name="davidSurel">david141@gmail.com</string>
 <string name="davidFakultas">Fasilkom-TI</string>
 <string name="davidProgrambelajar">Teknologi Informasi</string>
 <string name="davidSemesterterdaftar">1</string>
 <string name="davidStatus">Aktif</string>

 //anhar
 <string name="anharNim">211402045</string>
 <string name="anharSurel">anhar45@gmail.com</string>
 <string name="anharFakultas">Fasilkom-TI</string>
 <string name="anharProgrambelajar">Teknologi Informasi</string>
 <string name="anharSemesterterdaftar">1</string>
 <string name="anharStatus">Aktif</string>

 //caesto
 <string name="caestoNim">211402084</string>
 <string name="caestoSurel">caesto84@gmail.com</string>
 <string name="caestoFakultas">Fasilkom-TI</string>
 <string name="caestoProgrambelajar">Teknologi Informasi</string>
 <string name="caestoSemesterterdaftar">1</string>
 <string name="caestoStatus">Aktif</string>

 //fairuz
 <string name="fairuzNim">211402048</string>
 <string name="fairuzSurel">fairuz48@gmail.com</string>
 <string name="fairuzFakultas">Fasilkom-TI</string>
 <string name="fairuzProgrambelajar">Teknologi Informasi</string>
 <string name="fairuzSemesterterdaftar">1</string>
 <string name="fairuzStatus">Aktif</string>

 //ikram
 <string name="ikramNim">211402108</string>
 <string name="ikramSurel">ikram108@gmail.com</string>
 <string name="ikramFakultas">Fasilkom-TI</string>
 <string name="ikramProgrambelajar">Teknologi Informasi</string>
 <string name="ikramSemesterterdaftar">1</string>
 <string name="ikramStatus">Aktif</string>




</resources>